test/parse/relaxed/bad/nonlafterclsnspaces.cnf
p cnf 0 0    what is this?
